TradeMarketing/force-app/main/default/objects/OrderItem/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <formula>PricebookEntry.Product2.Item_Class_Desc__c</formula>
    <label>Brand</label>
    <type>Text</type>
</CustomField>