TradeMarketing/force-app/main/default/objects/OrderItem/fields/DISP_CS__c.field-meta.xml
<CustomField>
    <fullName>DISP_CS__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Displays_In_Case__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display per Case</label>
    <type>Text</type>
</CustomField>