TradeMarketing/force-app/main/default/objects/OrderItem/fields/Displays__c.field-meta.xml
<CustomField>
    <fullName>Displays__c</fullName>
    <label>Displays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>