TradeMarketing/force-app/main/default/objects/OrderItem/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <formula>(PricebookEntry.Product2.Name)</formula>
    <label>Item Description</label>
    <type>Text</type>
</CustomField>