TradeMarketing/force-app/main/default/objects/OrderItem/fields/Item_Num__c.field-meta.xml
<CustomField>
    <fullName>Item_Num__c</fullName>
    <externalId>true</externalId>
    <label>Item Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>