TradeMarketing/force-app/main/default/objects/OrderItem/fields/ORDER_NUM__c.field-meta.xml
<CustomField>
    <fullName>ORDER_NUM__c</fullName>
    <description>GP Order number</description>
    <externalId>true</externalId>
    <inlineHelpText>GP order Number</inlineHelpText>
    <label>Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>