TradeMarketing/force-app/main/default/objects/OrderItem/fields/QTY_DISPLAYS__c.field-meta.xml
<CustomField>
    <fullName>QTY_DISPLAYS__c</fullName>
    <formula>(Quantity) *  ( VALUE(DISP_CS__c) )</formula>
    <label>Quantity Displays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>