TradeMarketing/force-app/main/default/objects/OrderItem/fields/Quantity_Type__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Type__c</fullName>
    <label>Quantity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pouch</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>