TradeMarketing/force-app/main/default/objects/OrderItem/fields/Request_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Request_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request Ticket</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>