TradeMarketing/force-app/main/default/objects/OrderItem/validationRules/If_Item_Status_equals_3.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Item_Status_equals_3</fullName>
    <active>true</active>
    <description>If Item Status equals 3 then Item cannot order/ return or inventory</description>
    <errorConditionFormula>(Product2.Item_Status__c = &#39;3&#39;  || Product2.Item_Status__c = &#39;2&#39;)</errorConditionFormula>
    <errorMessage>Products with item status 2 or 3 cannot be ordered.</errorMessage>
</ValidationRule>